--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/redux": "3.6.0",
     "axios": "^0.27.2",
+    "components": "^0.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.0",
     "react-toastify": "^8.0.3",
     "react-use-localstorage": "^3.5.3",
+    "styled": "^1.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.5.5",
     "use-local-storage": "^2.3.6",
